Time: 8 ms (88.58%) | Memory: 46.4 MB (70.40%) - LeetSync